--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
+    "axios": "^1.9.0",
     "json-server": "^0.17.0",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
